--- a/index.html
+++ b/index.html
@@ -8,25 +8,39 @@
 </head>
 <body>
 	<div class="flex-container">
-      <div class="box">
-         <h3>Changes of Government</h3>
-         <img src="../images/government.png" class="image-icons" alt="government" width="200">
-         <p>hi</p>
+      <div class="box"> 
+      <a href="expressive-type">      
+         <img src="images/expressive-type/inclusion.png" class="images" alt="government" width="300">
+         <div class="overlay">
+		    <div class="text">Expressive Type</div>
+		  </div>
+		</a>
       </div>
-      <div class="box">
-         <h3>ksdk</h3>
-         <p>hi</p>
+      <div class="box"> 
+      <a href="expressive-type">      
+         <img src="images/expressive-type/inclusion.png" class="images" alt="government" width="300">
+         <div class="overlay">
+		    <div class="text">Hello World</div>
+		  </div>
+		</a>
       </div>
    </div>
    <div class="flex-container">
-      <div class="box">
-         <h3>Changes of Government</h3>
-         <img src="../images/government.png" class="image-icons" alt="government" width="200">
-         <p>hi</p>
+      <div class="box"> 
+      <a href="expressive-type">      
+         <img src="images/expressive-type/inclusion.png" class="images" alt="government" width="300">
+         <div class="overlay">
+		    <div class="text">Hello World</div>
+		  </div>
+		</a>
       </div>
-      <div class="box">
-         <h3></h3>
-         <p>hi</p>
+      <div class="box"> 
+      <a href="expressive-type">      
+         <img src="images/expressive-type/inclusion.png" class="images" alt="government" width="300">
+         <div class="overlay">
+		    <div class="text">Hello World</div>
+		  </div>
+		</a>
       </div>
    </div>
 </body>
