added portfolio pieces

--- a/index.html
+++ b/index.html
@@ -9,28 +9,28 @@
 <body>
 	<div class="flex-container">
       <div class="box"> 
-      <a href="expressive-type">      
-         <img src="images/expressive-type/inclusion.png" class="images" alt="government" width="300">
+      <a href="expressive-type.html">      
+         <img src="images/expressive-type/expansion.png" class="images" alt="government" width="300">
          <div class="overlay">
 		    <div class="text">Expressive Type</div>
 		  </div>
 		</a>
       </div>
       <div class="box"> 
-      <a href="expressive-type">      
-         <img src="images/expressive-type/inclusion.png" class="images" alt="government" width="300">
+      <a href="face-logo.html">      
+         <img src="images/face-logo/logo-1.png" class="images" alt="government" width="300">
          <div class="overlay">
-		    <div class="text">Hello World</div>
+		    <div class="text">Face Logo</div>
 		  </div>
 		</a>
       </div>
    </div>
    <div class="flex-container">
       <div class="box"> 
-      <a href="expressive-type">      
-         <img src="images/expressive-type/inclusion.png" class="images" alt="government" width="300">
+      <a href="typographic-sys.html">      
+         <img src="images/typo-sys/random.png" class="images" alt="government" width="300">
          <div class="overlay">
-		    <div class="text">Hello World</div>
+		    <div class="text">Typographic Systems</div>
 		  </div>
 		</a>
       </div>
