--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<div class="flex-container">
       <div class="box"> 
       <a href="expressive-type.html">      
-         <img src="images/expressive-type/expansion.png" class="images" alt="government" width="300">
+         <img src="images/expressive-type/expansion.png" class="images" alt="government" width="500">
          <div class="overlay">
 		    <div class="text">Expressive Type</div>
 		  </div>
@@ -18,7 +18,7 @@
       </div>
       <div class="box"> 
       <a href="face-logo.html">      
-         <img src="images/face-logo/logo-1.png" class="images" alt="government" width="300">
+         <img src="images/face-logo/logo-1.png" class="images" alt="government" width="500">
          <div class="overlay">
 		    <div class="text">Face Logo</div>
 		  </div>
@@ -28,7 +28,7 @@
    <div class="flex-container">
       <div class="box"> 
       <a href="typographic-sys.html">      
-         <img src="images/typo-sys/random.png" class="images" alt="government" width="300">
+         <img src="images/typo-sys/random.png" class="images" alt="government" width="500">
          <div class="overlay">
 		    <div class="text">Typographic Systems</div>
 		  </div>
@@ -36,9 +36,9 @@
       </div>
       <div class="box"> 
       <a href="expressive-type">      
-         <img src="images/expressive-type/inclusion.png" class="images" alt="government" width="300">
+         <img src="images/shapes-colors/weights.png" class="images" alt="government" width="500">
          <div class="overlay">
-		    <div class="text">Hello World</div>
+		    <div class="text">Shapes and Colors</div>
 		  </div>
 		</a>
       </div>
