--- a/index.html
+++ b/index.html
@@ -43,5 +43,41 @@
 		</a>
       </div>
    </div>
+   <div class="flex-container">
+      <div class="box"> 
+      <a href="expressive-type.html">      
+         <img src="images/expressive-type/expansion.png" class="images" alt="government" width="500">
+         <div class="overlay">
+		    <div class="text">Expressive Type</div>
+		  </div>
+		</a>
+      </div>
+      <div class="box"> 
+      <a href="face-logo.html">      
+         <img src="images/face-logo/logo-1.png" class="images" alt="government" width="500">
+         <div class="overlay">
+		    <div class="text">Face Logo</div>
+		  </div>
+		</a>
+      </div>
+   </div>
+   <div class="flex-container">
+      <div class="box"> 
+      <a href="typographic-sys.html">      
+         <img src="images/typo-sys/random.png" class="images" alt="government" width="500">
+         <div class="overlay">
+		    <div class="text">Typographic Systems</div>
+		  </div>
+		</a>
+      </div>
+      <div class="box"> 
+      <a href="expressive-type">      
+         <img src="images/shapes-colors/weights.png" class="images" alt="government" width="500">
+         <div class="overlay">
+		    <div class="text">Shapes and Colors</div>
+		  </div>
+		</a>
+      </div>
+   </div>
 </body>
 </html>
