--- a/index.html
+++ b/index.html
@@ -46,17 +46,17 @@
    <div class="flex-container">
       <div class="box"> 
       <a href="expressive-type.html">      
-         <img src="images/expressive-type/expansion.png" class="images" alt="government" width="500">
+         <img src="images/akuma/logo.png" class="images" alt="government" width="500">
          <div class="overlay">
-		    <div class="text">Expressive Type</div>
+		    <div class="text">Akuma Shrimp Burger</div>
 		  </div>
 		</a>
       </div>
       <div class="box"> 
       <a href="face-logo.html">      
-         <img src="images/face-logo/logo-1.png" class="images" alt="government" width="500">
+         <img src="images/metamorphosis/logo.png" class="images" alt="government" width="500">
          <div class="overlay">
-		    <div class="text">Face Logo</div>
+		    <div class="text">Metamorphosis</div>
 		  </div>
 		</a>
       </div>
@@ -64,17 +64,17 @@
    <div class="flex-container">
       <div class="box"> 
       <a href="typographic-sys.html">      
-         <img src="images/typo-sys/random.png" class="images" alt="government" width="500">
+         <img src="images/unstoppable/logo.png" class="images" alt="government" width="500">
          <div class="overlay">
-		    <div class="text">Typographic Systems</div>
+		    <div class="text">Unstoppable</div>
 		  </div>
 		</a>
       </div>
       <div class="box"> 
       <a href="expressive-type">      
-         <img src="images/shapes-colors/weights.png" class="images" alt="government" width="500">
+         <img src="images/climate/logo.png" class="images" alt="government" width="500">
          <div class="overlay">
-		    <div class="text">Shapes and Colors</div>
+		    <div class="text">The Climate Phenomenon</div>
 		  </div>
 		</a>
       </div>
