added styling + label to portfolio boxes

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Portfolio</title>
+	<link href="https://fonts.googleapis.com/css?family=Old+Standard+TT:400,400i&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
@@ -12,7 +13,10 @@
       <a href="expressive-type.html">      
          <img src="images/expressive-type/expansion.png" class="images" alt="government" width="500">
          <div class="overlay">
-		    <div class="text">Expressive Type</div>
+		    <div class="text">Expressive Type
+		    	<br>
+		    	<p class="small-text">–Graphic Design</p>
+		    </div>
 		  </div>
 		</a>
       </div>
@@ -20,7 +24,10 @@
       <a href="face-logo.html">      
          <img src="images/face-logo/logo-1.png" class="images" alt="government" width="500">
          <div class="overlay">
-		    <div class="text">Face Logo</div>
+		    <div class="text">Face Logo
+		    <br>
+		    	<p class="small-text">–Graphic Design</p>
+		    </div>
 		  </div>
 		</a>
       </div>
@@ -30,7 +37,10 @@
       <a href="typographic-sys.html">      
          <img src="images/typo-sys/random.png" class="images" alt="government" width="500">
          <div class="overlay">
-		    <div class="text">Typographic Systems</div>
+		    <div class="text">Typographic Systems
+		    <br>
+		    	<p class="small-text">–Graphic Design</p>
+		    </div>
 		  </div>
 		</a>
       </div>
@@ -38,7 +48,10 @@
       <a href="expressive-type">      
          <img src="images/shapes-colors/weights.png" class="images" alt="government" width="500">
          <div class="overlay">
-		    <div class="text">Shapes and Colors</div>
+		    <div class="text">Shapes and Colors
+		    <br>
+		    	<p class="small-text">–Graphic Design</p>
+		    </div>
 		  </div>
 		</a>
       </div>
@@ -48,7 +61,10 @@
       <a href="expressive-type.html">      
          <img src="images/akuma/logo.png" class="images" alt="government" width="500">
          <div class="overlay">
-		    <div class="text">Akuma Shrimp Burger</div>
+		    <div class="text">Akuma Shrimp Burger
+		    <br>
+		    	<p class="small-text">–Graphic Design, Branding</p>
+		    </div>
 		  </div>
 		</a>
       </div>
@@ -56,7 +72,10 @@
       <a href="face-logo.html">      
          <img src="images/metamorphosis/logo.png" class="images" alt="government" width="500">
          <div class="overlay">
-		    <div class="text">Metamorphosis</div>
+		    <div class="text">Metamorphosis
+		    <br>
+		    	<p class="small-text">–Web Design, Branding</p>
+		    </div>
 		  </div>
 		</a>
       </div>
@@ -66,7 +85,10 @@
       <a href="typographic-sys.html">      
          <img src="images/unstoppable/logo.png" class="images" alt="government" width="500">
          <div class="overlay">
-		    <div class="text">Unstoppable</div>
+		    <div class="text">Unstoppable
+		    <br>
+		    	<p class="small-text">–Web Design</p>
+		    </div>
 		  </div>
 		</a>
       </div>
@@ -74,7 +96,10 @@
       <a href="expressive-type">      
          <img src="images/climate/logo.png" class="images" alt="government" width="500">
          <div class="overlay">
-		    <div class="text">The Climate Phenomenon</div>
+		    <div class="text">The Climate Phenomenon
+		    <br>
+		    	<p class="small-text">–Web Design</p>
+		    </div>
 		  </div>
 		</a>
       </div>
