put files into dev folder

--- a/dev/index.html
+++ b/dev/index.html
@@ -8,6 +8,24 @@
 	<link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
+	<!-- Top navigation -->
+<div class="topnav">
+
+  <!-- Centered link -->
+  <div class="topnav-centered">
+    <a href="#home" class="active">ESCARLETH FERNANDEZ</a>
+  </div>
+
+  <!-- Left-aligned links (default) -->
+  <a href="#news">WORK</a>
+  
+
+  <!-- Right-aligned links -->
+  <div class="topnav-right">
+    <a href="#search">ABOUT</a>
+  </div>
+
+</div>
 	<div class="flex-container">
       <div class="box"> 
       <a href="expressive-type.html">      
