added + style nav bar

--- a/dev/index.html
+++ b/dev/index.html
@@ -4,24 +4,16 @@
 	<meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Portfolio</title>
-	<link href="https://fonts.googleapis.com/css?family=Old+Standard+TT:400,400i&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Old+Standard+TT:400,400i|Open+Sans&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
-	<!-- Top navigation -->
 <div class="topnav">
-
-  <!-- Centered link -->
   <div class="topnav-centered">
-    <a href="#home" class="active">ESCARLETH FERNANDEZ</a>
+    <a href="#home" class="active">escarleth fernandez</a>
   </div>
-
-  <!-- Left-aligned links (default) -->
   <a href="#news">WORK</a>
-  
-
-  <!-- Right-aligned links -->
-  <div class="topnav-right">
+    <div class="topnav-right">
     <a href="#search">ABOUT</a>
   </div>
 
