added line to separate nav bar and content

--- a/dev/index.html
+++ b/dev/index.html
@@ -16,6 +16,9 @@
     <div class="topnav-right">
     <a href="#search">ABOUT</a>
   </div>
+  <div class="line">
+  	
+  </div>
 
 </div>
 	<div class="flex-container">
