added space between nav and content

--- a/dev/index.html
+++ b/dev/index.html
@@ -16,11 +16,13 @@
     <div class="topnav-right">
     <a href="#search">ABOUT</a>
   </div>
-  <div class="line">
+  <div class="line"></div>
+</div>
+ <div>
+  	<br>
+  	<br>
   	
   </div>
-
-</div>
 	<div class="flex-container">
       <div class="box"> 
       <a href="expressive-type.html">      
