fixed file path of index page

--- a/dev/index.html
+++ b/dev/index.html
@@ -60,7 +60,7 @@
 		</a>
       </div>
       <div class="box"> 
-      <a href="expressive-type">      
+      <a href="sahpes-colors.html">      
          <img src="images/shapes-colors/weights.png" class="images" alt="government" width="500">
          <div class="overlay">
 		    <div class="text">Shapes and Colors
@@ -73,7 +73,7 @@
    </div>
    <div class="flex-container">
       <div class="box"> 
-      <a href="expressive-type.html">      
+      <a href="akuma.html">      
          <img src="images/akuma/logo.png" class="images" alt="government" width="500">
          <div class="overlay">
 		    <div class="text">Akuma Shrimp Burger
@@ -84,7 +84,7 @@
 		</a>
       </div>
       <div class="box"> 
-      <a href="face-logo.html">      
+      <a href="metamorphosis.html">      
          <img src="images/metamorphosis/logo.png" class="images" alt="government" width="500">
          <div class="overlay">
 		    <div class="text">Metamorphosis
@@ -97,7 +97,7 @@
    </div>
    <div class="flex-container">
       <div class="box"> 
-      <a href="typographic-sys.html">      
+      <a href="unstop.html">      
          <img src="images/unstoppable/logo.png" class="images" alt="government" width="500">
          <div class="overlay">
 		    <div class="text">Unstoppable
@@ -108,7 +108,7 @@
 		</a>
       </div>
       <div class="box"> 
-      <a href="expressive-type">      
+      <a href="climate.html">      
          <img src="images/climate/logo.png" class="images" alt="government" width="500">
          <div class="overlay">
 		    <div class="text">The Climate Phenomenon
