--- a/dev/index.html
+++ b/dev/index.html
@@ -60,8 +60,8 @@
 		</a>
       </div>
       <div class="box"> 
-      <a href="sahpes-colors.html">      
-         <img src="images/shapes-colors/weights.png" class="images" alt="government" width="500">
+      <a href="shapes-colors.html">      
+         <img src="images/shapes/weights.png" class="images" alt="government" width="500">
          <div class="overlay">
 		    <div class="text">Shapes and Colors
 		    <br>
