--- a/dev/shapes-colors.html
+++ b/dev/shapes-colors.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Typographic Systems</title>
+	<title>Shapes and Colors</title>
 	<link href="https://fonts.googleapis.com/css?family=Old+Standard+TT:400,400i|Open+Sans|Prata&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="styles/style.css">
 </head>
@@ -26,7 +26,7 @@
 	<div class="flex-container">
       <div class="box"> 
         <div class="explanation">
-        <h1 class="title">Typographic Systems <br>
+        <h1 class="title">Shapes and Colors <br>
         –Winter 2018</h1>
       </div>
 		  </div>
@@ -36,38 +36,50 @@
       <h3>Class –</h3>
       <p>Digital Design and Usability</p>
       <h3>Info –</h3>
-      <p> For this assignment, we had to create 7 designs based on 7 of the typographic systems: Axial,  Radial,  Dilatational, Random, Transitional,  Bilateral, and Modular. Our source material had to be a concert/music festival of our own making, which included choosing at least 4 bands, a concert venue, a time, and a date. The idea behind the projectis about experimenting with using typography, shapes and color as only design elements. </p>
+      <p> For this assignment, we had to create 10 designs based on Olympic sports. The choice of sports is was for our choosing, but we had to choose from Summer and Winter. This Project is about experimenting with shapes and color to create dynamic images.</p>
     </div>
 		  </div>   
    </div>
 
     <div class="flex-container">
       <div class="box"> 
-        <img src="images/typo-sys/modular.png" alt="" width="500">
+        <img src="images/shapes/alpine.png" alt="" width="500">
       </div>
       <div class="box"> 
-        <img src="images/typo-sys/random.png" alt="" width="500">
+        <img src="images/shapes/bobsleigh.png" alt="" width="500">
     </div>
       </div> 
       <div class="flex-container">
       <div class="box"> 
-        <img src="images/typo-sys/radial.png" alt="" width="500">
+        <img src="images/shapes/hockey.png" alt="" width="500">
       </div>
       <div class="box"> 
-        <img src="images/typo-sys/axial.png" alt="" width="500">
+        <img src="images/shapes/ice-skating.png" alt="" width="500">
     </div>
       </div> 
       <div class="flex-container">
       <div class="box"> 
-        <img src="images/typo-sys/dilational.png" alt="" width="500">
+        <img src="images/shapes/snowboarding.png" alt="" width="500">
       </div>
       <div class="box"> 
-        <img src="images/typo-sys/bilateral.png" alt="" width="500">
+        <img src="images/shapes/weights.png" alt="" width="500">
     </div>
       </div> 
       <div class="flex-container">
       <div class="box"> 
-        <img src="images/typo-sys/transitional.png" alt="" width="500">
+        <img src="images/shapes/cycling.png" alt="" width="500">
       </div>
+      <div class="box"> 
+        <img src="images/shapes/gymnastics.png" alt="" width="500">
+    </div>
+      
+      </div> 
+      <div class="flex-container">
+      <div class="box"> 
+        <img src="images/shapes/swimming.png" alt="" width="500">
+      </div>
+       <div class="box"> 
+        <img src="images/shapes/soccer.png" alt="" width="500">
+    </div>
       
       </div> 
