--- a/dev/metamorphosis.html
+++ b/dev/metamorphosis.html
@@ -27,7 +27,7 @@
       <div class="box"> 
         <div class="explanation">
         <h1 class="title">Metamorphosis <br>
-        –Winter 2018</h1>
+        –Spring 2019</h1>
       </div>
 		  </div>
 	
