--- a/dev/index.html
+++ b/dev/index.html
@@ -10,11 +10,11 @@
 <body>
 <div class="topnav">
   <div class="topnav-centered">
-    <a href="#home" class="active">escarleth fernandez</a>
+    <a href="index.html" class="active">escarleth fernandez</a>
   </div>
-  <a href="#news">WORK</a>
+  <a href="index.html">WORK</a>
     <div class="topnav-right">
-    <a href="#search">ABOUT</a>
+    <a href="about.html">ABOUT</a>
   </div>
   <div class="line"></div>
 </div>
