--- a/dev/metamorphosis.html
+++ b/dev/metamorphosis.html
@@ -61,23 +61,27 @@
     </div>
       <div class="flex-container">
       <div class="box"> 
-        <img src="images/metamorphosis/ester.png" alt=""  width="1300"></div>     
+        <img src="images/metamorphosis/ester-1.png" alt=""  height="800"></div>     
+      </div>
+      <div class="flex-container">
+      <div class="box"> 
+        <img src="images/metamorphosis/ester-2.png" alt=""  height="800"></div>     
       </div>
       
       </div> 
       <div class="flex-container">
       <div class="box"> 
-        <img src="images/metamorphosis/scholarships.png" alt="" height="800">
+        <img src="images/metamorphosis/scholarships.png" alt=""height="800">
       </div>
       </div> 
       <div class="flex-container">
       <div class="box"> 
-        <img src="images/metamorphosis/news.png" alt="" height="800">
+        <img src="images/metamorphosis/news.png" alt="" height="800"> 
       </div>
     </div>
       <div class="flex-container">
       <div class="box"> 
-        <img src="images/metamorphosis/events.png" alt="" height="800">
+        <img src="images/metamorphosis/events.png" alt="" height ="800">
       </div>
       </div> 
       <div class="flex-container">
