--- a/dev/about.html
+++ b/dev/about.html
@@ -57,7 +57,7 @@
           <p><a href="mailto:escarleth.fernandez5@gmail.com"><img src="images/icons/mail.png" alt="mail" width="50"></a></p>
         </div>
          <div class="column">
-          <p><a href="https://linkedin.com/in/escarleth-fernandez-899167144/"><img src="images/icons/in.png" alt="linkedin" width="50"></a></p>
+          <p><a href="https://linkedin.com/in/escarleth-fernandez-899167144/" target="_blank"><img src="images/icons/in.png" alt="linkedin" width="50"></a></p>
         </div>
       </div>
 
